# Chat_cmake

Chat/: CMakeLists.txt  CMakeSettings.json
Chat/Chat/: CMakeLists.txt  Chat  Chat.cpp  Makefile  User.cpp  User.h  chat_client  chat_client.cpp  chat_client.h  chat_server.cpp  chat_server.h  message.cpp  message.h  messages.txt  sha1  sha1.cpp  sha1.h  socket.cpp  socket.h  users.txt
